[package]
name = "PA-BOTNET-CLIENT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnetwork = "0.20.0"
regex = "1.4"

serde_json = "1.0.111"
object = { version = "0.32.2", features = [] }
serde = { version = "1.0.194", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
rsa = "0.9.6"
rand = "0.8.5"
rsa-export = "0.3.3"

aes = { version = "0.8.3", features = [] }
cbc = "0.1.2"
block-modes = "0.9.1"
hex-literal = "0.4.1"
hex = "0.4.3"
base64 = { version = "0.21.7", features = [] }
generic-array = "0.14.7"
machine-uid = "0.5.1"
typenum = "1.17.0"
hound = "3.5.1"
write = "0.1.0"
config = "0.13.4"


